--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing = "20px">
         <tr>
-            <td><img src="/images/Profile Photo.png" alt="Jimmy Consulta" width="150px"></td>
+            <td><img src="Profile Photo.png" alt="Jimmy Consulta" width="150px"></td>
             <td><h1>Jimmy Consulta</h1>
                 <p><em>Senior Verification Officer of <strong><a href="https://cashmart.ph/">CASHMART PHILIPPINES</a></strong></em></p>
                 <p>I am a self studying Junior Web Developer </p>
